--- a/admin/admin.html
+++ b/admin/admin.html
@@ -26,74 +26,80 @@
   <div class="form">
 
         <ul class="tab-group">
-          <li class="tab active"><a href="#signup">Sign Up</a></li>
-          <li class="tab"><a href="#login">Log In</a></li>
+          <li class="tab active"><a href="#addRecipe">Add recipe</a></li>
+          <li class="tab"><a href="#addIngredient">add ingredient</a></li>
         </ul>
 
         <div class="tab-content">
-          <div id="signup">
-            <h1>Sign Up for Free</h1>
+          <div id="addRecipe">
+            <h1>Add Your Recipe</h1>
 
             <form action="/" method="post">
 
-            <div class="top-row">
+
               <div class="field-wrap">
                 <label>
-                  First Name<span class="req">*</span>
+                  The name<span class="req">*</span>
                 </label>
                 <input type="text" required autocomplete="off" />
               </div>
 
-              <div class="field-wrap">
-                <label>
-                  Last Name<span class="req">*</span>
-                </label>
-                <input type="text"required autocomplete="off"/>
-              </div>
+            <div class="field-wrap field-wrap-2">
+              <label>
+                Descreption<span class="req">*</span>
+              </label>
+              <textarea rows="4" cols="30"> </textarea>
+            </div>
+
+            <div class="field-wrap field-wrap-2">
+              <label>
+                Ingredients<span class="req">*</span>
+              </label>
+              <textarea rows="4" cols="30"> </textarea>
             </div>
 
             <div class="field-wrap">
               <label>
-                Email Address<span class="req">*</span>
+                Upload Image<span class="req">*</span>
               </label>
-              <input type="email"required autocomplete="off"/>
+              <input type="text"required autocomplete="off"/>
             </div>
 
-            <div class="field-wrap">
-              <label>
-                Set A Password<span class="req">*</span>
-              </label>
-              <input type="password"required autocomplete="off"/>
-            </div>
-
-            <button type="submit" class="button button-block"/>Get Started</button>
+            <button type="submit" class="button button-block"/>Submit</button>
 
             </form>
 
           </div>
 
-          <div id="login">
-            <h1>Welcome Back!</h1>
+          <div id="addIngredient">
+            <h1>Add Your Ingredient</h1>
 
             <form action="/" method="post">
 
               <div class="field-wrap">
               <label>
-                Email Address<span class="req">*</span>
+                the Name<span class="req">*</span>
               </label>
-              <input type="email"required autocomplete="off"/>
+              <input type="text"required autocomplete="off"/>
             </div>
 
             <div class="field-wrap">
               <label>
-                Password<span class="req">*</span>
+                category<span class="req">*</span>
               </label>
-              <input type="password"required autocomplete="off"/>
+              <input type="text"required autocomplete="off"/>
+            </div>
+
+            <div class="field-wrap">
+              <label>
+                Uplaod Image<span class="req">*</span>
+              </label>
+              <input type="text"required autocomplete="off"/>
             </div>
 
             <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-            <button class="button button-block"/>Log In</button>
+            <button class="button button-block"/>Submit</button>
 
             </form>
 
@@ -102,6 +108,6 @@
         </div><!-- tab-content -->
 
   </div> <!-- /form -->
-
+  <script src="admin.js"></script>
 </body>
 </html>
