--- a/Main/index.html
+++ b/Main/index.html
@@ -17,7 +17,7 @@
 		<script src="includes/js/modernizr-2.6.2.min.js"></script>
 	</head>
 
-	<body>
+	<body ng-app="newsApp">
 
 		<div class="container" id="main">
 			<div class="navbar navbar-fixed-top">
