--- a/Main/index.html
+++ b/Main/index.html
@@ -15,10 +15,19 @@
 		<link rel="stylesheet" href="includes/css/styles.css">
 		<!-- Include Modernizr in the head, before any other Javascript -->
 		<script src="includes/js/modernizr-2.6.2.min.js"></script>
+		<script>
+		var myApp = angular.module('myApp', [], function($interpolateProvider) {
+			    $interpolateProvider.startSymbol('[[');
+			    $interpolateProvider.endSymbol(']]');
+			});
+		</script>
 	</head>
 
 	<body>
-
+		<div>
+			<input ng-model="test">
+			<h1>{{test}}</h1>
+		</div>
 
 
 			<!-- All Javascript at the bottom of the page for faster page loading -->
